--- a/200.html
+++ b/200.html
@@ -5,20 +5,20 @@
 		<link rel="icon" href="/dice-stats/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/start.BMI2GHFD.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/B7y4_otb.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/CFRRCRBd.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/8Cl9-1f5.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/app.Bx191eMv.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/BnXcX0Ig.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/Bs3qzfBs.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DOsk5Mzi.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/start.BkBH84Z9.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DeDxa3Vw.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/CM38LwsY.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/ByGHtW2_.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/app.CzcEqIQm.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/CJqi4Gmf.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/Dt4d9UH8.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DtPSp3XK.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_tlrufz = {
+					__sveltekit_13oq3mi = {
 						base: "/dice-stats",
 						assets: "/dice-stats"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/dice-stats/_app/immutable/entry/start.BMI2GHFD.js"),
-						import("/dice-stats/_app/immutable/entry/app.Bx191eMv.js")
+						import("/dice-stats/_app/immutable/entry/start.BkBH84Z9.js"),
+						import("/dice-stats/_app/immutable/entry/app.CzcEqIQm.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
