--- a/200.html
+++ b/200.html
@@ -5,20 +5,20 @@
 		<link rel="icon" href="/dice-stats/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/start.BkBH84Z9.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DeDxa3Vw.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/CM38LwsY.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/ByGHtW2_.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/app.CzcEqIQm.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/CJqi4Gmf.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/Dt4d9UH8.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DtPSp3XK.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/start.BKeZwpck.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DFqwqxFc.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/Cx6A-doE.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/Dpx5gnFg.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/app.CtVH6t9I.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/COiASy8m.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DejEMzzS.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DuSTasR-.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_13oq3mi = {
+					__sveltekit_1wkd4m2 = {
 						base: "/dice-stats",
 						assets: "/dice-stats"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/dice-stats/_app/immutable/entry/start.BkBH84Z9.js"),
-						import("/dice-stats/_app/immutable/entry/app.CzcEqIQm.js")
+						import("/dice-stats/_app/immutable/entry/start.BKeZwpck.js"),
+						import("/dice-stats/_app/immutable/entry/app.CtVH6t9I.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
