--- a/200.html
+++ b/200.html
@@ -5,20 +5,20 @@
 		<link rel="icon" href="/dice-stats/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/start.BKeZwpck.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DFqwqxFc.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/Cx6A-doE.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/Dpx5gnFg.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/app.CtVH6t9I.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/COiASy8m.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DejEMzzS.js">
-		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DuSTasR-.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/start.CISiKLkf.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/BhY6b76F.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/C9yqO1Qa.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/BvHJJhgW.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/entry/app.C8FU-Ihk.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DXOpzjK3.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DZEbM5N7.js">
+		<link rel="modulepreload" href="/dice-stats/_app/immutable/chunks/DVSHkZI_.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1wkd4m2 = {
+					__sveltekit_1gsxxaq = {
 						base: "/dice-stats",
 						assets: "/dice-stats"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/dice-stats/_app/immutable/entry/start.BKeZwpck.js"),
-						import("/dice-stats/_app/immutable/entry/app.CtVH6t9I.js")
+						import("/dice-stats/_app/immutable/entry/start.CISiKLkf.js"),
+						import("/dice-stats/_app/immutable/entry/app.C8FU-Ihk.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
