--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 		
 		<link href="./_app/immutable/assets/0.B7Qtmdpw.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.6GK0IfSu.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BJ71708F.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DkkvbdJX.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CH5QrViq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CBEECR_A.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9yqO1Qa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvHJJhgW.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Bek61xOx.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.W0QmPtQ2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DXOpzjK3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DZEbM5N7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DVSHkZI_.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Dt6WIwlh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.BSzcxPuC.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.btKzXcy6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/XP1VIVni.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_yapha4 = {
+					__sveltekit_cbnbq4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/dice-stats"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BJ71708F.js"),
-						import("./_app/immutable/entry/app.Bek61xOx.js")
+						import("./_app/immutable/entry/start.CH5QrViq.js"),
+						import("./_app/immutable/entry/app.W0QmPtQ2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
