--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 		
 		<link href="./_app/immutable/assets/0.B7Qtmdpw.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.6GK0IfSu.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BK_LHzln.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/4cvxtSYK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C5cyE_7c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/v_rCHvQK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9yqO1Qa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvHJJhgW.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CvLmjxBp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C9Jnommo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DXOpzjK3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DZEbM5N7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DVSHkZI_.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Dt6WIwlh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.eJNYJ3PZ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.ZMhb936s.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/XP1VIVni.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_2lj378 = {
+					__sveltekit_928c6x = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/dice-stats"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BK_LHzln.js"),
-						import("./_app/immutable/entry/app.CvLmjxBp.js")
+						import("./_app/immutable/entry/start.C5cyE_7c.js"),
+						import("./_app/immutable/entry/app.C9Jnommo.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
