--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 		
 		<link href="./_app/immutable/assets/0.B7Qtmdpw.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.6GK0IfSu.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ykLmRJOG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/NlyBNRDz.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D0kqdjdX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/NgH3GG53.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9yqO1Qa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvHJJhgW.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B8w1OdLp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BsbIYrC0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DXOpzjK3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DZEbM5N7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DVSHkZI_.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Dt6WIwlh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DzB3LDtZ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BjsyOgGi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/XP1VIVni.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -24,15 +24,15 @@
 			
 			<script>
 				{
-					__sveltekit_15f84uv = {
+					__sveltekit_sb1m6r = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ykLmRJOG.js"),
-						import("./_app/immutable/entry/app.B8w1OdLp.js")
+						import("./_app/immutable/entry/start.D0kqdjdX.js"),
+						import("./_app/immutable/entry/app.BsbIYrC0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
