--- a/simulate.html
+++ b/simulate.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.aQ3vReot.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.IF1AmwzF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DevMvBBU.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D4_QH3Gt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BvHvFX-r.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BRAC96ck.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DNx5FWpv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.i5TqNBlc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.64X3A466.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DG5GROcN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvnwopYh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Cv1NOAed.js">
@@ -25,15 +25,15 @@
 			
 			<script>
 				{
-					__sveltekit_146fryv = {
+					__sveltekit_76xu1h = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.IF1AmwzF.js"),
-						import("./_app/immutable/entry/app.i5TqNBlc.js")
+						import("./_app/immutable/entry/start.D4_QH3Gt.js"),
+						import("./_app/immutable/entry/app.64X3A466.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
